--- a/App_combine_version/introduction.Rmd
+++ b/App_combine_version/introduction.Rmd
@@ -6,7 +6,7 @@ output: html_fragment
 
 ## Welcome to Environment and Health App 
 
-The Environment and Health App is to help users to analyze and visualize data about environment and health. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses.
+The Environment and Health App is to help users to analyze and visualize data about environment and health. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses. Besides, you can get summary statistics and brief introduction of your health status.
 
 In terms of dataset, users can analyze Air Quality Index (AQI) and global temperature data.
 
@@ -29,7 +29,7 @@ In terms of dataset, users can analyze Air Quality Index (AQI) and global temper
 
 * The U.S. pollution dataset contains four major pollutants (Nitrogen Dioxide, Sulphur Dioxide, Carbon Monoxide and Ozone) AQI data for every day from 2000-2016. All the data is scraped from the database of U.S. [EPA](https://aqsdr1.epa.gov/aqsweb/aqstmp/airdata/download_files.html)
 
-* AirQualityTracking dataset contains (Yiquan)
+* AirQualityTracking dataset contains different air quality values of different state. The dataset was from Center for Disease Control and the air quality was a combination of ozone and PM2.5. 
 
 ### Global temperature datasets
 
