--- a/App_combine_version/introduction.Rmd
+++ b/App_combine_version/introduction.Rmd
@@ -87,7 +87,7 @@ Choose year period, CBSA and Health Concern Levels you want to analyze. You can 
 
 For users who want to do comparison during a relatively long time period, the better choice is to select line plot and analyze the trend.
 
-For users who want to do comparison only in one or a few years, select bar plot here. For example, if users want to compare the percentage of health concern levels between diffrent CBSAs only in a specific year (2008), choose bar plot and the graph will display properly.
+For users who want to do comparison only in one or a few years, select bar plot here. For example, if users want to compare the percentage of health concern levels between different CBSAs only in a specific year (2008), choose bar plot and the graph will display properly.
 
 + **Health Concern Plot:**
 
