--- a/App_combine_version/introduction.Rmd
+++ b/App_combine_version/introduction.Rmd
@@ -6,13 +6,15 @@ output: html_fragment
 
 ## Welcome to Environment and Health App 
 
-The Environment and Health App is to help users to analyze and visualize data about environment and health. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses. Besides, you can get summary statistics and brief introduction of your health status.
+The Environment and Health App is to help users analyze and visualize environmental and health data. It can be used to do horizontal analyses among different countries, states and cities. You can also use it to do time series analyses. Besides, you can get summary statistics and evaluate your health status based on personal characteristics.
 
-In terms of dataset, users can analyze Air Quality Index (AQI) and global temperature data.
+In terms of dataset used in the app, users can analyze Air Quality Index (AQI) and global temperature data.
+
+##Audience
+
+Environmental engineers and people who are interested in analyzing environmental data and concerned with the relationship between environment and health status.
 
 ## Glossary
-
-<br/>
 
 [AQI](https://en.wikipedia.org/wiki/Air_quality_index): An air quality index (AQI) is a number used by government agencies to communicate to the public how polluted the air currently is or how polluted it is forecast to become. 
 
@@ -47,71 +49,73 @@ Notes: There are some missing values in the following datasets, which leads to t
 
 #### AQI Plot
 
-##### Analysis selection - Boxplot of AQI: 
+##### Analysis selection - Boxplot of AQI
 
 This boxplot can show you how AQI distributed from 2000-2017. You can use the notches on the boxplots to analyze whether there is strong evidence (95% confidence) that their medians differ, whether the median changed much during specific time period and whether the distribution approximate to normal distribution or it was skewed.
 
-+ **Inputs Selection**: 
+###### Inputs Selection 
 <br/>
 <div style="text-align:center" markdown="1";width:200px; height=200px>
-![Boxplot Inputs Selection](app_screenshot/box_inputs.jpg)
+![Boxplot Inputs Selection](app_screenshot/box_inputs.png)
 </div>
 
 You can use the Year slider change the time period. We set the default value at 2000-2017 (the longest time period for Annual AQI dataset).
 
 Select the CBSA you are interested and then red spots on the boxplots can tell you how the air quality in that area was compared to other CBSAs in each year (Above median or below median). The default value of CBSA is Providence.
 
-+ **Boxplot:**
+###### Boxplot of AQI
 
 <br/>
 <div style="text-align:center";width:100px>
-![Boxplot of AQI](app_screenshot/boxplot.jpg)
+![Boxplot of AQI](app_screenshot/boxplot.png)
 </div>
 
 Using the default value of each selection, the boxplots display as above.
 
-##### Analysis selection - Health Concern by AQI:
+##### Analysis selection - Health Concern by AQI
 
 You can use the Health Concern Plot analyze the trend of percentage of each health concern level during a specific time period and compare the percentage among CBSAs.
 
-+ **Inputs Selection**:
+###### Inputs Selection
 
 <br/>
 <div style="text-align:center";width:100px>
-![Health Concern Plot Inputs Seletion](app_screenshot/hc_inputs.jpg)
+![Health Concern Plot Inputs Seletion](app_screenshot/hc_inputs.png)
 </div>
 
 Choose year period, CBSA and Health Concern Levels you want to analyze. You can select multiple CBSAs and Health Concern Levels to do comparison analyses. The picture above show you the default values of each selection.
 
-**Plot Selection**:
+###### Plot Selection
 
 For users who want to do comparison during a relatively long time period, the better choice is to select line plot and analyze the trend.
 
 For users who want to do comparison only in one or a few years, select bar plot here. For example, if users want to compare the percentage of health concern levels between different CBSAs only in a specific year (2008), choose bar plot and the graph will display properly.
 
-+ **Health Concern Plot:**
+###### Health Concern Plot
 
   <br/>
 
-![Health Concern Line Plot](app_screenshot/line_plot.jpg)
+![Health Concern Line Plot](app_screenshot/line_plot.png)
   
   <br/>
   
-![Health Concern Bar Plot](app_screenshot/bar_plot.jpg)
+![Health Concern Bar Plot](app_screenshot/bar_plot.png)
+
 #### Pollutant AQI Trend
 
 You can use these time series plots to analyze the trend of AQI by pollutant. 
 
-+ **Inputs Selection**
+##### Inputs Selection
 
 You can select multiple inputs for cities and pollutants to do comparison. Use the Year slider to choose the time period (Default value is 2000-2016).
 
   <br/>
-![Health Concern Bar Plot](app_screenshot/Pollutant_Trend.jpg)
+![Health Concern Bar Plot](app_screenshot/Pollutant_Trend.png)
   <br/>
 
 #### Cluster
-+ **Data**
+
+##### Data
 
 The data comes from annual aqi by cbsa. For the pollution part, the variables are percentage of a certain pollutants because some of the original data are zero. For the health part, the input variable is the number of different situations of days(Good, unhealthy, etc). The cluster count is the number of clusters you want to divide.
 
@@ -119,67 +123,71 @@ The data comes from annual aqi by cbsa. For the pollution part, the variables ar
 
 #### Air Quality Map 
 
-+ **Input Selection**
+##### Input Selection
 
 The year is the certain year you want to specify to get to know about the air quality of the United States. The color is the kind of color you want to display in the state map.
 
-+ **Note**
+**Note**
 
 The data is from the center of disease control. The air quality is a combination of the ozone and PM2.5. 
 
 #### Temperature Map
 
-+ **Inputs Selection**
+##### Inputs Selection
 
   <br/>
   <div style="text-align:center";width:100px>
-![Health Concern Bar Plot](app_screenshot/map_inputs.jpg)
+![Health Concern Bar Plot](app_screenshot/map_inputs.png)
 </div>
   <br/>
   
   Use the two datasets analyze temperature by countries or states.
 
-**Note**: there are some missing values for some countries or states which caused the incompleteness of the map in specific year.
+**Note** 
+
+There are some missing values for some countries or states which caused the incompleteness of the map in specific year.
 
 When the default value for temperature variation is false, the map will show the temperature in specific year according to the Year input. 
 
 <br/>
 <div style="text-align:center";width:200px>
-![Temperature Map by Country](app_screenshot/country_temp.jpg)
+![Temperature Map by Country](app_screenshot/country_temp.png)
 
 </div>
 
 <br/>
 <div style="text-align:center";width:200px>
-![Temperature Map by State](app_screenshot/state_temp.jpg)
+![Temperature Map by State](app_screenshot/state_temp.png)
 </div>
 
 When you choose true for temperature variation, you can then analyze how temperature changed during the time period you select through the Year for Temperature Variation slider.
 
 <br/>
 <div style="text-align:center";width:200px>
-![Temperature Variation Map by Country](app_screenshot/var_temp.jpg)
+![Temperature Variation Map by Country](app_screenshot/var_temp.png)
 
 </div>
-**Note:** the Year for Temperature Variation slider should only be used when you select the GlobalLandTemperaturesByCountry dataset.
+**Note** 
+
+The Year for Temperature Variation slider should only be used when you select the GlobalLandTemperaturesByCountry dataset.
 
 ### Calculator
 
-+ **Input Selection**
+#### Input Selection
 
 The City has certain information about the air quality of that city you choose. Smoking is whether you smoke or not, if you smoke then select "yes". Exercise is whether you exercise or not, if you do, select "yes". Gene is whether your family has certain kind of gene that may cause disease, if they do, select "yes".
 
-+ **Usage**
+#### Usage
 
 This part mainly calculate the summary statistic of the city you choose. For the health part, it gives a brief result of your health condition.
 
 ### Temperature Trend
 
-+ **Dataset Selection**
+#### Dataset Selection
 
 You can choose global temperature or global land temperature by country to analyze the overall global temperature trend or temperature trend by country.
 
-+ **Type Selection**
+#### Type Selection
 
 You can analyze either yearly average temperature or monthly average temperature trend.
 
@@ -187,7 +195,7 @@ When you choose global temperature dataset, the graphs will display properly for
 
 <br/>
 <div style="text-align:center";width:200px>
-![Temperature Variation Map by Country](app_screenshot/glb_temp.jpg)
+![Temperature Variation Map by Country](app_screenshot/glb_temp.png)
 
 </div>
 
@@ -195,15 +203,15 @@ When you choose global land temperature by country dataset and want to compare t
 
 <br/>
 <div style="text-align:center";width:200px>
-![Temperature Variation Map by Country](app_screenshot/country_temp_trend.jpg)
+![Temperature Variation Map by Country](app_screenshot/country_temp_trend.png)
 </div>
 
-+ **Confidence Interval**
+#### Confidence Interval
 
 You can choose to display confidence interval around smooth.
 
 <br/>
 <div style="text-align:center; width:200px">
-![Temperature Variation Map by Country](app_screenshot/confidence.jpg)
+![](app_screenshot/ci.png)
 
 </div>
